# face-rotation

./: .gitignore  Dockerfile  pyproject.toml  rocm_run  s6_sync.sh
book/: book.toml
book/src/: SUMMARY.md  head-detection.md
docker/: Pipfile
face_rotation/: evaluate.py  train.py
face_rotation_trig/: evaluate.py  generate_dataset.py  load_dataset.py  model.json  push_s6.sh  train.py
other/: cvtest.py
other/face_rotation_angle/: datasetgen.py  evaluate.py  model.json  train.py
other/face_rotation_angle/training/: cp.ckpt.index
other/mnist_rotation_angle/: datasetgen.py  evaluate.py  model.json  train.py
other/mnist_rotation_trig/: datasetgen.py  evaluate.py  model.json  push_s6.sh  train.py
other/mnist_rotation_trig/training/: cp.ckpt.index
